--- a/sweet-management-system-main/frontend/index.html
+++ b/sweet-management-system-main/frontend/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <nav>
-    <h1>🍬 Sweet Shop</h1>
+    <h1> Sweet Shop</h1>
     <button id="addBtn" onclick="loadRoute('add')">Add Sweet</button>
     <button onclick="loadRoute('view')">View Sweets</button>
     <button onclick="loadRoute('search')">Search</button>
