--- a/sweet-management-system-main/frontend/pages/add.html
+++ b/sweet-management-system-main/frontend/pages/add.html
@@ -6,6 +6,6 @@
     <input type="text" id="category" placeholder="Category" required />
     <input type="number" id="price" placeholder="Price" required />
     <input type="number" id="quantity" placeholder="Quantity" required />
-    <button type="submit">➕ Add</button>
+    <button type="submit"> Add</button>
   </form>
 </section>
