--- a/sweet-management-system-main/frontend/pages/login.html
+++ b/sweet-management-system-main/frontend/pages/login.html
@@ -1,7 +1,8 @@
 <section class="login-form">
   <h2>Login to Sweet Shop</h2>
   <form id="loginForm">
+    <input type="text" id="user_name" placeholder="User Name" required />
     <input type="password" id="password" placeholder="Enter password..." required />
-    <button type="submit">🔐 Login</button>
+    <button type="submit">🔐 <b>Login</b></button>
   </form>
 </section>
